# AIE6-Julien

./: .gitattributes  .gitignore  AIE6_Julien_UnslothGRPOTraining.ipynb  sync_new_folders.sh  sync_upstream.sh
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  Introduction_to_LangGraph_for_Agents_Assignment_Version_corrige.ipynb  fix_notebook.py  fix_notebook_json.py  repair_notebook.py
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_Advanced.ipynb  Multi_Agent_RAG_LangGraph.ipynb  Multi_Agent_RAG_LangGraph_OpenAI.py
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Finetuning_Embeddings/: Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  pyproject.toml  test_dataset.jsonl  training_dataset.jsonl  val_dataset.jsonl
11_App_Challenge/puppycompanion-app/: .gitignore  agent_workflow.py  chainlit.md  pyproject.toml
11_App_Challenge/puppycompanion-app/data/: preprocessed_chunks.pkl
13_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment copy 2.ipynb  Advanced_Retrieval_with_LangChain_Assignment copy.ipynb  Advanced_Retrieval_with_LangChain_Assignment.ipynb  Advanced_Retrieval_with_LangChain_Assignment_.ipynb  fix_langsmith.py  pyproject.toml  results_df.csv  retriever_evaluation_report.md  setup_langsmith.py  tmp.py
(+125 files in other folders)
