[project]
name = "puppycompanion"
version = "0.1.0"
description = "Intelligent canine assistant based on RAG"
readme = "README.md"
authors = [
    {name = "jthomazo", email = "julien.thomazo@gmail.com"},
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-qdrant>=0.1.0",
    "qdrant-client>=1.7.0",
    "chainlit>=1.0.0",
    "openai>=1.6.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.0.17",
    "tavily-python>=0.2.8",
    "httpx>=0.26.0",
    "anyio>=4.5.0",
    "python-multipart>=0.0.9",
    "starlette>=0.41.3"
]

requires-python = ">=3.9,<4.0"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools] 
py-modules = []